cluster_setup/security_groups.tf
resource "aws_security_group" "eks_cluster_sg" {
  name_prefix = "eks_cluster_sg-"
  description = "Security group for EKS cluster"
  vpc_id      = aws_vpc.my_vpc.id

  # Allow control plane traffic only from worker nodes, pods to communicate with the cluster API Server
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.eks_worker_sg.id]
  }

  # Allow outbound traffic to the Internet (for control plane communication)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "eks_worker_sg" {
  name_prefix = "eks_worker_sg-"
  description = "Security group for EKS worker nodes"
  vpc_id      = aws_vpc.my_vpc.id

  # Allow inbound traffic from control plane
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.eks_cluster_sg.id]
  }

  # Allow inbound traffic from other worker nodes (for inter-node communication), "Allow node to communicate with each other"
  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    self        = true
  }

  # Allow worker Kubelets and pods to receive communication from the cluster control plane
  ingress {
    from_port   = 1025
    to_port     = 65535
    protocol    = "tcp"
    security_groups = [aws_security_group.eks_worker_sg.id]
  }

  # Allow outbound traffic to the Internet (for updates, package installations, etc.)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
